--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@
     --GrayishBlue: hsl(220, 15%, 55%);
     --DarkBlue: hsl(218, 44%, 22%);
     font-family: "Outfit", sans-serif;
+    font-size: 16px;
 }
 
 * {
@@ -36,7 +37,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1.4rem;
+    row-gap: 1.4rem;
     background-color: var(--White);
     max-width: 19rem;
     padding: 0.9rem;
@@ -47,6 +48,7 @@ body {
     text-align: center;
     font-size: 22.1px;
     margin-bottom: -0.4rem;
+    color: var(--DarkBlue);
 }
 
 .card-text {
@@ -81,5 +83,11 @@ body {
     .card {
 
         transform: scale(98%);
+    }
+}
+@media (width > 400px) {
+    .card {
+
+        transform: scale(103%);
     }
 }
