--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   --GrayishBlue: hsl(220, 15%, 55%);
   --DarkBlue: hsl(218, 44%, 22%);
   font-family: "Outfit", sans-serif;
+  font-size: 16px;
 }
 
 * {
@@ -35,7 +36,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1.4rem;
+  row-gap: 1.4rem;
   background-color: var(--White);
   max-width: 19rem;
   padding: 0.9rem;
@@ -46,6 +47,7 @@ body {
   text-align: center;
   font-size: 22.1px;
   margin-bottom: -0.4rem;
+  color: var(--DarkBlue);
 }
 
 .card-text {
@@ -80,5 +82,10 @@ body {
 @media (width < 400px) {
   .card {
     transform: scale(98%);
+  }
+}
+@media (width > 400px) {
+  .card {
+    transform: scale(103%);
   }
 }/*# sourceMappingURL=style.css.map */
