--- a/css/style.scss
+++ b/css/style.scss
@@ -57,11 +57,12 @@ body {
     text-align: center;
     overflow-wrap: break-word;
     margin-bottom: 0rem;
-    margin-top: -2.7rem;
+    margin-top: 0;
     padding-bottom: 2px;
     font-weight: 400;
     margin-left: 0.9rem;
     margin-right: 0.9rem;
+     margin-bottom: 30.2px;
 }
 
 .qr-image {
