--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
   align-items: center;
   row-gap: 1.4rem;
   background-color: var(--White);
-  max-width: 19rem;
+  max-width: 20rem;
   padding: 0.9rem;
 }
 
@@ -52,7 +52,7 @@ body {
 
 .card-text {
   font-size: 15px;
-  color: var(--GrayishBlue);
+  color: var(--DarkBlue);
   text-align: center;
   overflow-wrap: break-word;
   margin-bottom: 0rem;
@@ -61,7 +61,7 @@ body {
   font-weight: 400;
   margin-left: 0.9rem;
   margin-right: 0.9rem;
-  margin-bottom: 30.2px;
+  margin-bottom: 28px;
 }
 
 .qr-image {
